# openchat

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md
backend/: .gitignore  TODO  alembic.ini  cli.py  pyproject.toml
backend/POC/: main.py  metadata.md  metadata.py  modulo.md
backend/alembic/: env.py
backend/alembic/versions/: 20241121_78659a819e5b_initial_database_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/middleware/: __init__.py  logging.py  timing.py
backend/app/api/v1/endpoint/: chat.py  health.py
backend/app/core/: cli.py  config.py  database.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/models/rag/: chunk.py  course.py  lesson.py  raw_transcription.py
backend/app/rag/audio/: audio_file_handler.py  batch_processor.py  cli.py  whisper.py
backend/app/rag/ingestion/: chunker.py  cli.py  models.py  processor.py  whisper.py
backend/app/rag/llm/: chain.py
backend/app/rag/vectorstore/: embeddings.py  store.py
backend/app/schemas/: chat.py
backend/app/services/: chat.py  llm.py  temp.py
backend/app/utils/: logger.py
backend/app/utils/decorators/: benchmark.py  decorators.py
backend/flows/: prefect_demo.py
backend/tests/factories/: __init__.py  base.py  chunk.py  course.py  lesson.py  raw_transcription.py
backend/tests/seeders/: __init__.py  base.py  chunk.py  course.py  lesson.py  raw_transcription.py  seeder.py
docker/: docker-compose.yaml
docs/: benchmarking.md  features.md  modelos.md  models_metrics.json  notas-08-11.md  plots.md  project-structure.txt  rag-architecture.md  rag-detail.mermaid  stack.md  vdb.md
frontend/: .prettierrc.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+18 files in other folders)
